[package]
name = "rust-networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.7"
rand = "0.8.5"
reqwest = "0.11.18"
thiserror = "1.0.50"
tokio = {version = "1.29.1", features = ["full"]}
